# esp-home

./: .gitignore  README.md  notes.md  readme.md
fase1/: readme.md
fase1/docs/: ia-prompt.md
fase1/domotica-local/main/: CMakeLists.txt  config.h  main.c  webserver.c
fase2/: readme.md
fase2/docker/: docker-compose-rpi.yml  docker-compose.yml  readme.md
fase2/docker/homeassistant/config/: home-assistant.log.1
fase2/docs/: config-raspi.md  ia-prompt.md
fase3/: .gitignore  readme.md
fase3/domotica/main/: CMakeLists.txt  config.h  main.c  mqtt_manager.c  mqtt_manager.h  network_manager.h
fase4/: readme.md
fase4/esp32_master/: dump_main.txt
fase4/esp32_master/main/: CMakeLists.txt  config.h  config_manager.c  controller.c  controller.h  dump_main.txt  espnow_master.c  espnow_master.h  lux_sensor.h  main.c  network_manager.c  network_manager.h  webserver.c
fase4/esp32_nodo/: CMakeLists.txt  espnow_node.c
fase4/esp32_nodo/main/: CMakeLists.txt  config.h  controller.h  espnow_node.c  espnow_node.h  led.h  lux_sensor.c  main.c
fase5/: readme.md
fase5/esp32_master/: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
fase5/esp32_master/main/: CMakeLists.txt  ble_protocol.h  ble_server.c  ble_server.h  config.h  config_manager.h  controller.c  controller.h  espnow_master.c  espnow_master.h  idf_component.yml  main.c  mqtt_manager.c  mqtt_manager.h  network_manager.c  oled_display.c  oled_display.h  u8g2_esp32_hal.c  u8g2_esp32_hal.h
fase5/esp32_nodo/: dump_main.txt
fase5/esp32_nodo/main/: config.h  controller.c  espnow_node.c  led_strip_ws.c  led_strip_ws.h  pir_sensor.c  pir_sensor.h
fase5/pwa/: ble-client.js  index.html  manifest.json  sw.js
modulos/m1/: README.md
modulos/m1/main/: CMakeLists.txt  config.h  controller.c  controller.h  main.c  mqtt_manager.c  network_manager.c  webserver.c  webserver.h
modulos/m2/: README.md
modulos/m2/main/: CMakeLists.txt  config.h  led.c  main.c  mqtt_manager.c  mqtt_manager.h  network_manager.c  webserver.c
